--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-nix = {version = "0.30.1", features = ["fs"]}
+nix = {version = "0.30.1", features = ["fs","process"]}
+derive_more = {version = "2.0.1", features = ["error","debug","display","from"]}
 
 
 [features]
